--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "todo":"npm start --prefix todo",
+    "dev":" concurrently \"npm start\" \"npm run todo\" "
   },
   "author": "",
   "license": "ISC",
